--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # @file: requirements.txt - for simple Django project using default SQLite3 DB.
-Bio
-Django
+Bio==1.78
+Django==3.1.3
 ncbi-acc-download
 # nose2
 # more_itertools
